--- a/SpointLiteVersion/SpointLiteVersion.csproj
+++ b/SpointLiteVersion/SpointLiteVersion.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Controllers\clientes1Controller.cs" />
     <Compile Include="Controllers\facturasController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\itbisController.cs" />
     <Compile Include="Controllers\productos1Controller.cs" />
     <Compile Include="Controllers\productosController.cs" />
     <Compile Include="Controllers\suplidoresController.cs" />
@@ -158,6 +159,9 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\facturas.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\itbis.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Model1.Context.cs">
@@ -7292,6 +7296,8 @@
     <Content Include="Rotativa\help-wkhtmltopdf.txt" />
     <Content Include="Rotativa\wkhtmltoimage.exe" />
     <Content Include="Rotativa\wkhtmltopdf.exe" />
+    <Content Include="Scripts\autoNumeric\autoNumeric-min.js" />
+    <Content Include="Scripts\autoNumeric\autoNumeric.js" />
     <Content Include="Scripts\inputmask\bindings\inputmask.binding.js" />
     <Content Include="Scripts\inputmask\dependencyLibs\inputmask.dependencyLib.jqlite.js" />
     <Content Include="Scripts\inputmask\dependencyLibs\inputmask.dependencyLib.jquery.js" />
@@ -7312,6 +7318,7 @@
     <Content Include="Scripts\inputmask\min\inputmask.min.js" />
     <Content Include="Scripts\inputmask\min\inputmask.numeric.extensions.min.js" />
     <Content Include="Scripts\inputmask\min\jquery.inputmask.min.js" />
+    <Content Include="Scripts\jquery.numeric.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\printThis.js" />
@@ -7401,6 +7408,12 @@
     <Content Include="Views\facturas\Edit.cshtml" />
     <Content Include="Views\facturas\Index.cshtml" />
     <Content Include="Views\facturas\VistaPdf.cshtml" />
+    <Content Include="Views\productos1\Inventario.cshtml" />
+    <Content Include="Views\itbis\Create.cshtml" />
+    <Content Include="Views\itbis\Delete.cshtml" />
+    <Content Include="Views\itbis\Details.cshtml" />
+    <Content Include="Views\itbis\Edit.cshtml" />
+    <Content Include="Views\itbis\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Content\bower_components\fullcalendar\dist\fullcalendar.d.ts" />
