--- a/SpointLiteVersion/packages.config
+++ b/SpointLiteVersion/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="alertify" version="0.3.11" targetFramework="net461" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="autoNumeric" version="1.9.45" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
@@ -20,6 +21,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Reporting.WinForms.v11" version="1.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.WebForms" version="150.1358.0" targetFramework="net461" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1358.0" targetFramework="net461" />
   <package id="Microsoft.ReportViewer.Common" version="10.0.40219.1" targetFramework="net461" />
   <package id="Microsoft.SqlServer.Types" version="14.0.314.76" targetFramework="net461" />
